force-app/main/default/objects/R360_Sub_Portfolio__c/R360_Sub_Portfolio__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Explicit delivery sub-portfolio beneath an account portfolio.</description><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><externalSharingModel>ControlledByParent</externalSharingModel><label>Resource 360 Sub-portfolio</label><nameField><label>Sub-portfolio Name</label><type>Text</type></nameField><pluralLabel>Resource 360 Sub-portfolios</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility></CustomObject>