force-app/main/default/objects/R360_Sub_Portfolio__c/fields/Account__c.field-meta.xml
<CustomField><fullName>Account__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Account</label><referenceTo>Account</referenceTo><relationshipLabel>Resource 360 Sub-portfolios</relationshipLabel><relationshipName>Resource360_Sub_Portfolios</relationshipName><required>true</required><type>Lookup</type></CustomField>