force-app/main/default/objects/R360_Sub_Portfolio__c/fields/Current__c.field-meta.xml
<CustomField><fullName>Current__c</fullName><defaultValue>true</defaultValue><label>Current</label><type>Checkbox</type></CustomField>