force-app/main/default/objects/R360_Sub_Portfolio__c/fields/Description__c.field-meta.xml
<CustomField><fullName>Description__c</fullName><label>Mandate</label><type>TextArea</type></CustomField>