force-app/main/default/objects/R360_Sub_Portfolio__c/fields/Health__c.field-meta.xml
<CustomField><fullName>Health__c</fullName><label>Health</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Green</fullName><default>true</default><label>Green</label></value><value><fullName>Amber</fullName><default>false</default><label>Amber</label></value><value><fullName>Red</fullName><default>false</default><label>Red</label></value></valueSetDefinition></valueSet></CustomField>