force-app/main/default/objects/R360_Sub_Portfolio__c/fields/Owner_User__c.field-meta.xml
<CustomField><fullName>Owner_User__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Sub-portfolio Lead</label><referenceTo>User</referenceTo><relationshipLabel>Owned Sub-portfolios</relationshipLabel><relationshipName>Owned_Sub_Portfolios</relationshipName><type>Lookup</type></CustomField>