force-app/main/default/objects/R360_Sub_Portfolio__c/fields/Portfolio__c.field-meta.xml
<CustomField><fullName>Portfolio__c</fullName><label>Portfolio</label><referenceTo>R360_Portfolio__c</referenceTo><relationshipLabel>Sub-portfolios</relationshipLabel><relationshipName>Sub_Portfolios</relationshipName><relationshipOrder>0</relationshipOrder><reparentableMasterDetail>true</reparentableMasterDetail><type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead></CustomField>