force-app/main/default/objects/R360_Sub_Portfolio__c/fields/Sub_Portfolio_ID__c.field-meta.xml
<CustomField><fullName>Sub_Portfolio_ID__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Sub-portfolio ID</label><length>50</length><required>true</required><type>Text</type><unique>true</unique></CustomField>