force-app/main/default/objects/R360_Sub_Portfolio__c/fields/Tower__c.field-meta.xml
<CustomField><fullName>Tower__c</fullName><label>Delivery Tower</label><length>80</length><required>true</required><type>Text</type></CustomField>