force-app/main/default/objects/R360_Sub_Portfolio__c/validationRules/Account_Matches_Portfolio.validationRule-meta.xml
<ValidationRule><fullName>Account_Matches_Portfolio</fullName><active>true</active><errorConditionFormula>Account__c &lt;&gt; Portfolio__r.Account__c</errorConditionFormula><errorMessage>Sub-portfolio account must match its portfolio account.</errorMessage></ValidationRule>