force-app/main/default/objects/R360_Sub_Portfolio__c/validationRules/Effective_Dates_Ordered.validationRule-meta.xml
<ValidationRule><fullName>Effective_Dates_Ordered</fullName><active>true</active><errorConditionFormula>AND(NOT(ISBLANK(Effective_To__c)), Effective_To__c &lt; Effective_From__c)</errorConditionFormula><errorMessage>Effective To cannot precede Effective From.</errorMessage></ValidationRule>